--- a/css/styles.css
+++ b/css/styles.css
@@ -216,7 +216,7 @@ ol {
   margin: 0 auto;
   font-size: 0.8rem;
   color: blueviolet;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .icons:active {
@@ -225,6 +225,10 @@ ol {
 
 #info-page h3 {
   margin: 1rem auto;
+}
+
+#info-page {
+  overflow-x: hidden;
 }
 
 #info-page h3:hover {
@@ -242,7 +246,7 @@ ol {
   padding-left: 0;
   margin: 0.5rem 0;
   word-wrap: normal;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .liquor-info-text {
